# NGBB-Route-Optimizer

./: NGBB_PROJECT.md  README.md
ngbb-routing/: .env.example  .gitignore  pyproject.toml  requirements.txt
ngbb-routing/docker/: Dockerfile  docker-compose.yml
ngbb-routing/experiments/: ablation_features.yaml  ablation_gnn_depth.yaml  eval_final.yaml  il_baseline.yaml  il_curriculum.yaml  rl_finetune.yaml
ngbb-routing/src/: __init__.py
ngbb-routing/src/data/: __init__.py  dataset.py  feature_extractor.py  generate.py  graph_constructor.py  instance_generator.py
ngbb-routing/src/evaluation/: __init__.py  baselines.py  benchmark.py  metrics.py  stats.py
ngbb-routing/src/models/: __init__.py  distillation.py  gnn.py  output_head.py  policy.py  student_gnn.py
ngbb-routing/src/solver/: __init__.py  branching_rule.py  event_logger.py  scip_wrapper.py  state_serializer.py  strong_branching.py
ngbb-routing/src/training/: __init__.py  curriculum.py  il_trainer.py  kd_trainer.py  losses.py  rl_trainer.py  train_il.py  train_kd.py  train_rl.py
ngbb-routing/src/utils/: __init__.py  config.py  logging.py  prng.py
ngbb-routing/tests/: test_gnn.py  test_graph_constructor.py  test_instance_generator.py  test_metrics.py  test_solver.py
ngbb-routing/visualizer/: index.html  package-lock.json  package.json  tailwind.config.js
ngbb-routing/visualizer/src/: App.jsx  main.jsx
ngbb-routing/visualizer/src/components/: ControlToolbar.jsx  HeaderBar.jsx  MetricCard.jsx  NodeReductionBadge.jsx  SolverCanvas.jsx  StatsDashboard.jsx  VsBadge.jsx
(+9 files in other folders)
