[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngbb-routing"
version = "1.0.0"
description = "Neural-Guided Branch & Bound for Dynamic Delivery Route Optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pyscipopt==4.4.0",
    "torch==2.3.0",
    "torch-geometric==2.5.3",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.0",
    "networkx==3.3",
    "h5py==3.11.0",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "wandb==0.17.0",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
    "tqdm==4.66.4",
    "rich==13.7.1",
    "click==8.1.7",
    "ortools==9.10.4067",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "hypothesis==6.102.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
